Name: AesonBson
Version: 0.2.0
License: OtherLicense
License-File: LICENSE
Maintainer: Niklas Hambuechen <mail@nh2.me>
Author: Niklas Hambuechen <mail@nh2.me> & Andras Slemmer <0slemi0@gmail.com>
Build-Type: Simple
Stability: experimental
Synopsis: Mapping between Aeson's JSON and Bson objects.
Description: This package lets you convert between Aeson's JSON and Bson objects.
Category: Data
Copyright: CC0
Cabal-Version: >= 1.10
Homepage:
Tested-With: GHC==7.6

source-repository head
  type:      git
  location:  git://github.com/nh2/AesonBson.git

Library
  Exposed-Modules:
    Data.AesonBson
    Data.AesonBson.Instances
  Build-Depends:
    base < 5,
    aeson >= 0.3,
    attoparsec >= 0.10,
    bson >= 0.2,
    unordered-containers >= 0.1.3.0,
    vector >= 0.7.1
  Hs-Source-Dirs: .
  Ghc-Options: -Wall
