Name: aeson-bson
Version: 0.3.1
License: OtherLicense
License-File: LICENSE
Maintainer: Niklas Hambuechen <mail@nh2.me>
Author: Niklas Hambuechen <mail@nh2.me> & Andras Slemmer <0slemi0@gmail.com>
Build-Type: Simple
Stability: experimental
Synopsis: Mapping between Aeson's JSON and Bson objects.
Description: This package lets you convert between Aeson's JSON and Bson objects.
Category: Data
Copyright: CC0
Cabal-Version: >= 1.6
Homepage:
Tested-With: GHC == 7.6.2

extra-source-files:
  README.md,
  test/Main.hs

source-repository head
  type:      git
  location:  git://github.com/adinapoli/aeson-bson.git

Library
  hs-source-dirs: src

  if impl(ghc >= 7.6.1)
    CPP-Options: -DNO_PRELUDE_CATCH

  Build-Depends:
    array -any,
    aeson,
    base >= 4 && < 5,
    bson,
    bytestring >= 0.10,
    containers -any,
    text >= 0.11.1.0,
    unordered-containers >= 0.1.3.0,
    vector -any, 
    scientific
    
  Exposed-Modules:
    Data.Aeson.Bson
  Ghc-Options: -Wall -fno-warn-orphans
